[package]
name = "wgpu-matCx3-padding-clobber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
pollster = "0.3.0"
# wgpu = { path = "../../../workspace/mozilla/wgpu/wgpu" }
wgpu = "22.1.0"
